--- a/src/app.scss
+++ b/src/app.scss
@@ -8,14 +8,14 @@
   font-display: swap;
   font-style: normal;
   font-named-instance: 'Regular';
-  src: url("Inter.var.woff2?v=3.18") format("woff2");
+  src: url("/Inter.var.woff2?v=3.18") format("woff2");
 }
 
 @font-face {
   font-family: "SF Symbols";
   font-weight: 500;
   font-style: normal;
-  src: url("/fonts/SFSymbols-Medium.woff2") format("woff2");
+  src: url("/SFSymbols-Medium.woff2") format("woff2");
 }
 
 :root {
