--- a/src/app.scss
+++ b/src/app.scss
@@ -21,3 +21,8 @@
 :root {
 	font-family: Inter, system-ui, sans-serif;
 }
+
+code {
+  font-family: 'SF Mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: .75rem;
+}
