--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "./lib/mixins.scss";
 
 @font-face {
   font-family: 'Inter';
@@ -61,10 +62,33 @@ hr {
   border-bottom: 1px solid var(--color);
   margin-bottom: -1px;
   transform: scale(1, calc(1 / var(--displayScale)));
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+
+  &.vertical {
+    border-right: 1px solid var(--color);
+    margin-right: -1px;
+    transform: scale(calc(1 / var(--displayScale)), 1);
+  }
 }
 
 .dark hr {
-  --color: rgba(255,255,255, calc(0.54 * var(--displayScale)));
+  --color: rgba(255,255,255, calc(0.24 * var(--displayScale)));
+}
+
+body {
+  background-color: #fafafa;
+  // --foreground: white;
+  
+}
+
+.dark {
+  background-color: #424242;
+  --foregound: #2b2b2b;
+}
+
+a {
+  color: #007aff;
+  // text-decoration: underline;
+}
+.dark a {
+  color: #0a84ff;
 }
